Fix color contrast on icons in darkmode

--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,11 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   background-color: rgba(180, 160, 140, 0.3);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   
   a {
     font-weight: 500;
@@ -82,11 +80,7 @@
     @apply text-neutral-50;
   }
 
-  h1 {
-    @apply !text-neutral-50;
-  }
-
-  h2 {
+  h1, h2, h3 {
     @apply !text-neutral-50;
   }
 
